# RoiEditor

./: check_install.bat  install.bat  install_cellpose.bat  install_python.bat  package_as_zip.py  pyproject.toml  readme.md
RoiEditor/: GuiLauncher.py  __main__.py  dependencies.py
RoiEditor/Lib/: Context.py  Crumbs.py  Exif.py  Feret.py  FileChoosers.py  FileDialog.py  HistogramFrame.py  InputValidation.py  LabelToRoi.py  LabelToRoiDiff.py  LogWindow.py  MeasurementWorker.py  MessageBoxInvalidValues.py  MouseListener.py  MsmtToFile.py  NumpyToRoi.py  RectangleSelectorView.py  Roi.py  RoiEditorControlPanel.py  RoiEditorControlPanel.ui  RoiImage.py  RoiMeasurements.py  RoiSelect.py  RoyalKeyInterceptor.py  StopWatch.py  Stylesheet.py  TinyColor.py  TinyLog.py  TinyRoiFile.py  TinyRoiManager.py  Workbench.py
RoiEditor/tests/: test_choosers.py  test_dialog.py  test_exif.py  test_feret.py  test_histogramframe.py  test_labeltoroi.py  test_labeltoroidiff.py  test_mouselistener.py  test_msgbxinvalid.py  test_msmts.py  test_msmtwrkr.py  test_numpytoroi.py  test_roiimage.py  test_roimanager.py  test_roiselect.py  test_royalkeyinterceptor.py  test_tinyroifile.py  test_workbench.py
assets/: keyboard overlay.pptx
tests/: test_exif.py  test_feret.py  test_histogramframe.py  test_labeltoroi.py  test_msmtwrkr.py  test_roiimage.py  test_roimanager.py  test_royalkeyinterceptor.py  test_workbench.py
tests/TestData/: A_Stitch_RoiSet_feret.csv  A_Stitch_RoiSet_feret2.csv  A_stitch_msmts.csv  A_stitch_msmts_lbl.csv  B_stitch_2.tiff  C_stitch_RoiSet_ACTIVE.csv  C_stitch_RoiSet_ALL.csv  (+3 more)
(+7 files in other folders)
