[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RoiEditor"
version = "2.0.0"
description = "ROI Editor - a Python-app for managing (Fiji/cellpose) ROIs"
authors = [{ name = "Bart Vanderbeke" }]
readme = ""
requires-python = ">=3.8"
dependencies = [
    "Pillow",
    "tifffile",
    "matplotlib",
    "scikit-image",
    "numpy",
    "numba",
    "opencv-python",
    "pyqtgraph",
    "PyQt6",
    "XlsxWriter"
]

[tool.setuptools.packages.find]
include = ["RoiEditor", "RoiEditor.Lib"]
exclude = ["data", "TestData"]

[project.scripts]
RoiEditor = "RoiEditor.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"RoiEditor" = ["Lib/*.ui"]
